# alnl

./: .gitignore  README.md
.alnl/xalnl/map/: read-cg-json.js
.alnl/xalnl/map/west/town/_tile/: castle01_a-alnl.png.cg.json  town-obj-alnl.png.cg.json  town04_b-alnl.png.cg.json
.alnl/xalnl/map/west/town/tried/: tried.tmx
.alnl/xalnl/map/xalnl-3.4.20/: read-cg-json.js  read-tile-json.js
.alnl/xalnl/map/xalnl-3.4.20/west/town/_tile/: castle01_a-alnl.png.cg.json  town-obj-alnl.png.cg.json  town-obj-alnl.xcf  town04_b-alnl.png.cg.json
.alnl/xalnl/map/xalnl-3.4.20/west/town/tried/: _tile  tried.json  tried.tmx
alnl/: ChangeLog.bak  Makefile  Makefile.in  README  README-DOS  README-MAC  alnl.spec  config.status  configure  configure.in
alnl/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
alnl/man/: Makefile  Makefile.am.~1.4.~  Makefile.in  lnl-faq.eng~  lnl-faq.jpn.~1.104.~  lnl.eng.~1.3.~  lnl.eng~  lnl.jpn.~1.101.~
alnl/src/: .gitignore  FileList.cpp  FileList.h  GameMisc.cpp  GameMisc.h  Makefile  Makefile.am  Makefile.am~  Makefile.in  PcgCharGraph.cpp  PcgCharGraph.h  PcgMap.cpp  PcgMap.h  PcgTile.cpp  PcgTile.h  abl-kind.h  call-prot.h  call.cpp  chr.c  chr.h  class-tab.h  config.h  config.h.in  crsr-ptn.h  curs-def.h  curs.c  curs.h  draw-tab.h  draw.c  draw.h  dun-prot.h  dun-tab.h  dun.c  dun.h  ending-ep.c  ending-ep.h  ending-space.c  ending-space.h  extern.h  fight.c  (+104 more)
alnl/src/.deps/: call.Po  chr.Po  curs.Po  draw.Po  dun.Po  ending-ep.Po  ending-space.Po  fight.Po  fx.Po  gf-conf.Po  gf-crsr.Po  gf-gconf.Po  gf-outmap.Po  gf-replay.Po  gf-save.Po  gf-town.Po  gfile.Po  gmain.Po  item.Po  key-item.Po  last-boss.Po  main-unix.Po  map-event.Po  menu-amark.Po  menu-main.Po  menu-misc.Po  menu-town.Po  menu.Po  misc.Po  mnstr-act.Po  mnstr.Po  msg.Po  nest-flg.Po  party.Po  pet.Po  play-rep.Po  replay.Po  request.Po  scene.Po  skill.Po  (+4 more)
sh/: ln-alnl-xalnl  ln-alnl-xalnl~  make-change-log
sh/prot/: all-prot  call-prot  chr-prot  curs-prot  draw-prot  dun-prot  ending-ep-prot  ending-space-prot  fight-prot  fx-prot  gfile-prot  gmain-prot  item-prot  key-item-prot  last-boss-prot  main-dos-prot  main-gtk-prot  main-unix-prot  main-win-prot  main-x-prot  map-event-prot  menu-amark-prot  menu-main-prot  menu-misc-prot  menu-prot  menu-town-prot  misc-prot  mnstr-act-prot  mnstr-prot  msg-prot  nest-flg-prot  party-prot  pet-prot  play-rep-prot  replay-prot  request-prot  scene-prot  skill-prot  spell-prot  town-prot  (+2 more)
xalnl/: Makefile  Makefile.am  Makefile.in  README  README-DOS  README-MAC  config.status  configure  configure.in  xalnl.spec
xalnl/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
xalnl/man/: Makefile  Makefile.in
xalnl/src/: .gitignore  CuiMouse.cpp  CuiMouse.h  DemoCutIn.cpp  DemoCutIn.h  DemoEnding.cpp  DemoEnding.h  DemoGameOver.cpp  DemoGameOver.h  DemoLastBoss.cpp  DemoLastBoss.h  DemoSpace.cpp  DemoSpace.h  DemoTitle.cpp  DemoTitle.h  DemoTitle.h~  FileList.cpp  FileList.h  GameJoystick.cpp  GameJoystick.h  GameMisc.cpp  GameMisc.h  GameMusic.cpp  GameMusic.h  GameSound.cpp  GameSound.h  GameThread.cpp  GameThread.h  GlobalVar.cpp  GlobalVar.h  GraphConf.cpp  GraphConf.h  GraphConfToken.h  GtkMisc.h  GtkWSCstring.cpp  GtkWSCstring.h  GtkWSDimage.h  GtkWSDmwindowDev.cpp  GtkWSDmwindowDev.h  GuiChrSheet.cpp  (+265 more)
xalnl/src/.deps/: CuiMouse.Po  DemoCutIn.Po  DemoEnding.Po  DemoGameOver.Po  DemoLastBoss.Po  DemoSpace.Po  DemoTitle.Po  FileList.Po  GameJoystick.Po  GameMusic.Po  GameSound.Po  GameThread.Po  GlobalVar.Po  GraphConf.Po  GtkWSCstring.Po  GtkWSDmwindowDev.Po  GuiChrSheet.Po  GuiClassEdit.Po  GuiInputString.Po  GuiLastBoss.Po  GuiMenu.Po  GuiMessage.Po  GuiMisc.Po  GuiNum.Po  GuiReplay.Po  GuiSkillEdit.Po  GuiStat.Po  GuiWords.Po  Key.Po  MouseMap.Po  MouseMotion.Po  Pcg.Po  PcgCharGraph.Po  PcgDun.Po  PcgMap.Po  PcgTile.Po  SelConf.Po  SelMbrGraph.Po  WinPos.Po  call.Po  (+44 more)
